updated react components

--- a/app/react_app/templates/index.html
+++ b/app/react_app/templates/index.html
@@ -8,7 +8,7 @@
     <title>Project 911</title>
 </head>
 
-<body>
+<body style="padding: 0;">
     <div id="root">
         <!-- React will load here -->
     </div>
